--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
               <div class="col-md-4">
                 <img src="science.png" class="bot_images">
                 <h5 class="small_header">Prioritizing science</h5>
-                <p class="text_small">Science first, always. Our information is medically-accurate and we will never “dumb down” information.</p>
+                <p class="text_small">Science first, always. Our information is medically-accurate and we will never 'dumb down' information.</p>
               </div>
               <div class="col-md-4">
                 <img src="data_img.png" class="bot_images">
@@ -78,7 +78,7 @@
         <div class="jumbotron container_styles">
             <h4 class="header_1" style='margin-bottom:5px!important'>Built with community in mind and powered by volunteers</h4>
             <p id="pub_health_text">
-                Our public health volunteers are what make our AI bot human. Our community means a lot to us, and it’s what drive us to do better and make our system more human-centered. 
+                Our public health volunteers are what make our AI bot human. Our community means a lot to us, and it's what drive us to do better and make our system more human-centered. 
             <p>
             <img src="community.png" class="bot_images" style="max-width:60%;">
             
