--- a/usethebots.html
+++ b/usethebots.html
@@ -39,7 +39,7 @@
                 <a class="nav-link nav-headers" href="mailto:chathealth1@gmail.com">Contact us</a>
               </li>
             </ul>
-            <a href="usethebots.html" class="button">Use our bots</a>
+            <a href="usethebots.html" class="button" style="font-size:1.2vw">Use our bots</a>
           </div>
         </nav>
         
