--- a/basicinfo.html
+++ b/basicinfo.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light nav_style" >
           <a class="navbar-brand logo" href="home.html">Chat Health</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon" style="width:1.5vw;height:1.5vw"></span>
           </button>
 
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
