--- a/graphics.html
+++ b/graphics.html
@@ -46,12 +46,12 @@
 
         <div class="jumbotron gen_style">
             <p id="graph_header">Confirmed cases time-series</p>
-            <iframe width="100%" height="800" frameborder="0" scrolling="no" src="//plotly.com/~jesseanderson22/3.embed"></iframe>
+            <iframe width="100%" height="500" frameborder="0" scrolling="no" src="//plotly.com/~jesseanderson22/3.embed"></iframe>
             <p id="annotation"><i>This graph plots confirmed cases from when PG County began reporting data on February 28 to present day. A confirmed case is a person who has tested positive for COVID-19 from an FDA-approved diagnostic test. If you hover over today's value, you will see the total number of unique individuals who have had a positive PCR test. Our data is updated daily between 11am-12pm ET. For optimal viewing experience, please explore this graph from your computer.</i></p>
 
         </div>
         
-        <div style='width:77.5%;margin-right:auto;margin-left:auto;margin-top:0px'>
+        <div class="table_structure">
             <div id="accordion">
                 <div class="card">
                     <div class="card-header" id="headingOne">
