--- a/basicinfo.html
+++ b/basicinfo.html
@@ -43,7 +43,7 @@
           </div>
         </nav>
 
-        <div id='table_structure'>
+        <div class='table_structure'>
             <div id="table-space">
                 <p id="key-info">Essential information</p>
             </div>
