--- a/usethebots.html
+++ b/usethebots.html
@@ -56,7 +56,7 @@
             
         </div>
         
-        <div style='width:77.5%;margin-right:auto;margin-left:auto;margin-top:0px'>
+        <div class="table_structure">
             <div id="accordion">
                 <div class="card">
                     <div class="card-header" id="headingOne">
