--- a/graphics.html
+++ b/graphics.html
@@ -46,7 +46,7 @@
 
         <div class="jumbotron gen_style">
             <p id="graph_header">Confirmed cases time-series</p>
-            <iframe width="100%" height="500" frameborder="0" scrolling="no" src="//plotly.com/~jesseanderson22/3.embed"></iframe>
+            <iframe width="100%" height="400" frameborder="0" scrolling="no" src="//plotly.com/~jesseanderson22/3.embed"></iframe>
             <p id="annotation"><i>This graph plots confirmed cases from when PG County began reporting data on February 28 to present day. A confirmed case is a person who has tested positive for COVID-19 from an FDA-approved diagnostic test. If you hover over today's value, you will see the total number of unique individuals who have had a positive PCR test. Our data is updated daily between 11am-12pm ET. For optimal viewing experience, please explore this graph from your computer.</i></p>
 
         </div>
@@ -122,5 +122,8 @@
             </ul>
             <a href="usethebots.html" class="button" style="font-size:1.2vw">Use our bots</a>
         </nav>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
 </html>
