--- a/basicinfo.html
+++ b/basicinfo.html
@@ -174,6 +174,8 @@
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light nav_style" style="margin-bottom:30px;margin-top:70px">
           <a class="navbar-brand footer_style" href="home.html" class="bottom_link" >Chat Health</a>
+          <a class="navbar-brand footer_style" href="theteam.html" class="bottom_link" style="color:#838383">Meet our team</a>
+          <a class="navbar-brand footer_style" href="resources.html" class="bottom_link" style="color:#9c9c9c">Additional resources</a>
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li>
                 </li>
