--- a/usethebots.html
+++ b/usethebots.html
@@ -113,6 +113,7 @@
           <a class="navbar-brand footer_style" href="home.html" class="bottom_link" >Chat Health</a>
           <a class="navbar-brand footer_style" href="theteam.html" class="bottom_link" style="color:#838383">Meet our team</a>
           <a class="navbar-brand footer_style" href="resources.html" class="bottom_link" style="color:#9c9c9c">Additional resources</a>
+          <a class="navbar-brand footer_style" href="tableFetch.html" class="bottom_link" style="color:#3477db">Volunteer Login</a>
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li>
                 </li>
