--- a/theteam.html
+++ b/theteam.html
@@ -35,7 +35,7 @@
           </div>
         </nav>
         
-        <section class="features container_styles" id="features">
+        <section class="features container_styles">
           <div class="container">
             <h4 class="header_1">Meet our team</h4>
             <div class="row">
@@ -63,7 +63,7 @@
           </div>
         </section>
         
-        <section class="features container_styles" id="features">
+        <section class="features container_styles">
             <div class="container">
                 <h4 class="header_1">The volunteers that power Chat Health</h4>
                 <div class="row">
@@ -100,6 +100,7 @@
           <a class="navbar-brand footer_style" href="home.html" class="bottom_link" >Chat Health</a>
           <a class="navbar-brand footer_style" href="theteam.html" class="bottom_link" style="color:#838383">Meet our team</a>
           <a class="navbar-brand footer_style" href="resources.html" class="bottom_link" style="color:#9c9c9c">Additional resources</a>
+          <a class="navbar-brand footer_style" href="tableFetch.html" class="bottom_link" style="color:#3477db">Volunteer Login</a>
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li>
                 </li>
