--- a/tableFetch.html
+++ b/tableFetch.html
@@ -83,7 +83,7 @@ function populate() {
             <a href="usethebots.html" class="button" style="font-size:1.2vw">Use our bots</a>
           </div>
         </nav>
-        <div class="features container_styles">
+        <div class="jumbotron gen_style">
             <div class="intro">
                 <h2 class="header_1" style="margin-bottom:10px">Question bank</h2>
                 <p class="text_small">This question bank documents the most recent entries we've received. </p>
