--- a/graphics.html
+++ b/graphics.html
@@ -115,15 +115,15 @@
         </div>
         
         <nav class="navbar navbar-expand-lg navbar-light bg-light nav_style" style="margin-bottom:30px;margin-top:70px">
-          <a class="navbar-brand footer_style" href="home.html" class="bottom_link" >Chat Health</a>
-          <a class="navbar-brand footer_style" href="theteam.html" class="bottom_link" style="color:#838383">Meet our team</a>
-          <a class="navbar-brand footer_style" href="resources.html" class="bottom_link" style="color:#9c9c9c">Additional resources</a>
-          <a class="navbar-brand footer_style" href="tableFetch.html" class="bottom_link" style="color:#3477db">Volunteer Login</a>
+          <a class="navbar-brand footer_style" href="http://chathealth.herokuapp.com/home.html" class="bottom_link" >Chat Health</a>
+          <a class="navbar-brand footer_style" href="http://chathealth.herokuapp.com/theteam.html" class="bottom_link" style="color:#838383">Meet our team</a>
+          <a class="navbar-brand footer_style" href="http://chathealth.herokuapp.com/resources.html" class="bottom_link" style="color:#9c9c9c">Additional resources</a>
+          <a class="navbar-brand footer_style" href="http://34.231.192.182/volunteer" class="bottom_link" style="color:#3477db">Volunteer Login</a>
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li>
                 </li>
             </ul>
-            <a href="usethebots.html" class="button" style="font-size:1.2vw">Use our bots</a>
+            <a href="http://chathealth.herokuapp.com/usethebots.html" class="button" style="font-size:1.2vw">Use our bots</a>
         </nav>
         
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
