--- a/tableFetch.html
+++ b/tableFetch.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="chathealthstyles.css">
+    <link rel="stylesheet" type="text/css" href="styleWebsite">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
@@ -63,22 +63,22 @@ function populate() {
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item active">
-                  <a class="nav-link nav-headers" href="about.html">About us</a>
+                  <a class="nav-link nav-headers" href="http://chathealth.herokuapp.com/about.html">About us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link nav-headers" href="basicinfo.html">Basic Information</a>
+                <a class="nav-link nav-headers" href="http://chathealth.herokuapp.com/basicinfo.html">Basic Information</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link nav-headers" href="usethebots.html">How to use our bots</a>
+                <a class="nav-link nav-headers" href="http://chathealth.herokuapp.com/usethebots.html">How to use our bots</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link nav-headers" href="graphics.html">Monitoring PG County</a>
+                <a class="nav-link nav-headers" href="http://chathealth.herokuapp.com/graphics.html">Monitoring PG County</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link nav-headers" href="mailto:chathealth1@gmail.com">Contact us</a>
               </li>
             </ul>
-            <a href="usethebots.html" class="button" style="font-size:1.2vw">Use our bots</a>
+            <a href="http://chathealth.herokuapp.com/usethebots.html" class="button" style="font-size:1.2vw">Use our bots</a>
           </div>
         </nav>
         <div class="jumbotron gen_style">
@@ -106,15 +106,15 @@ function populate() {
 
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light nav_style" style="margin-bottom:30px;margin-top:70px">
-          <a class="navbar-brand footer_style" href="home.html" class="bottom_link" >Chat Health</a>
-          <a class="navbar-brand footer_style" href="theteam.html" class="bottom_link" style="color:#838383">Meet our team</a>
-          <a class="navbar-brand footer_style" href="resources.html" class="bottom_link" style="color:#9c9c9c">Additional resources</a>
-          <a class="navbar-brand footer_style" href="tableFetch.html" class="bottom_link" style="color:#3477db">Volunteer Login</a>
+          <a class="navbar-brand footer_style" href="http://chathealth.herokuapp.com/home.html" class="bottom_link" >Chat Health</a>
+          <a class="navbar-brand footer_style" href="http://chathealth.herokuapp.com/theteam.html" class="bottom_link" style="color:#838383">Meet our team</a>
+          <a class="navbar-brand footer_style" href="http://chathealth.herokuapp.com/resources.html" class="bottom_link" style="color:#9c9c9c">Additional resources</a>
+          <a class="navbar-brand footer_style" href="http://34.231.192.182/volunteer" class="bottom_link" style="color:#3477db">Volunteer Login</a>
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li>
                 </li>
             </ul>
-            <a href="usethebots.html" class="button" style="font-size:1.2vw">Use our bots</a>
+            <a href="http://chathealth.herokuapp.com/usethebots.html" class="button" style="font-size:1.2vw">Use our bots</a>
         </nav>
     </body>
 </html>
