--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
             
         </div>
         
-        <section class="features container_styles" id="features">
+        <section class="features container_styles">
           <div class="container">
             <h4 class="header_1">Accessible and research-driven</h4>
             <div class="row">
