--- a/theteam.html
+++ b/theteam.html
@@ -40,7 +40,7 @@
             <h4 class="header_1">Meet our team</h4>
             <div class="row">
               <div style="width:25%">
-                <img src="shah.jpg" class="bot_images" style="border-radius:20px">
+                <img src="shahheadshot.jpg" class="bot_images" style="border-radius:20px">
                 <h5 class="small_header">Veeraj Shah</h5>
                 <p class="text_small">Co-founder</p>
               </div>
