--- a/graphics.html
+++ b/graphics.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/bdced515aa.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
+    <script src="https://kit.fontawesome.com/bdced515aa.js" crossorigin="anonymous"></script>
 </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light nav_style" >
@@ -46,19 +46,22 @@
 
         <section class="features container_styles">
           <div class="container">
-            <h4 class="header_1">Here's what you need to know today</h4>
+            <h4 class="header_1" style="font-size:2.2vw">Here's what you need to know today</h4>
             <div class="row graphic_row">
               <div class="col-md-4 graphic_div">
-                <h4 class="small_header" id="positive_tests">4.4% positive tests</h4>
-                <p class="text_small">This represents the percent of tests done throughout the week that were positive. There were 4.1% positive tests last week.</p>
+                <h4 class="small_header" id="positive_tests" style="font-size:2.2vw">4.4% positive tests</h4>
+                <p class="text_small">This represents the percent of tests done throughout the week that were positive.</p>
+                <p class="text_small" style="font-weight:bold"><i class="far fa-clock" style="color:white;font-weight:bold"></i> There were 4.1% positive tests last week.</p>
               </div>
               <div class="col-md-4 graphic_div">
-                <h4 class="small_header" id="new_cases">780 new cases</h4>
-                <p class="text_small">This represents the number of new confirmed positive cases reported this week. There were 695 new cases reported last week.</p>
+                <h4 class="small_header" id="new_cases" style="font-size:2.2vw">780 new cases</h4>
+                <p class="text_small">This represents the number of new confirmed positive cases reported this week. </p>
+                <p class="text_small" style="font-weight:bold"><i class="far fa-clock" style="color:white;font-weight:bold"></i> There were 695 new cases reported last week.</p>
               </div>
               <div class="col-md-4 graphic_div">
-                <h4 class="small_header" id="hospitalizations">49 hospitalizations</h4>
-                <p class="text_small">This value represents the average number of people hospitalized for Covid-19 this week. There were 60 average hospitalizations last week.</p>
+                <h4 class="small_header" id="hospitalizations" style="font-size:2.2vw">49 hospitalizations</h4>
+                <p class="text_small">This value represents the average number of people hospitalized for Covid-19 this week. 
+                <p class="text_small" style="font-weight:bold"><i class="far fa-clock" style="color:white;font-weight:bold"></i> There were 60 average hospitalizations last week.</p>
               </div>
             </div>
           </div>
