--- a/basicinfo.html
+++ b/basicinfo.html
@@ -33,7 +33,7 @@
                 <a class="nav-link nav-headers" href="usethebots.html">How to use our bots</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link nav-headers" href="https://princegeorges.maps.arcgis.com/apps/MapSeries/index.html?appid=82fa5c47b1f542849ca6162ab1564453" target="_blank">Monitoring PG County</a>
+                <a class="nav-link nav-headers" href="https://princegeorges.maps.arcgis.com/apps/MapSeries/index.html?appid=82fa5c47b1f542849ca6162ab1564453" target="_blank">Monitoring Prince George's County</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link nav-headers" href="mailto:chathealth1@gmail.com">Contact us</a>
