--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
             <div class="left">
                 <h3 style="font-size:2.0vw">We're here for you</h3>
                 <p style="font-size:1.6vw;font-weight:300">
-                    Our automated chatbot walks you through difficult medical conversations while maintaining the feel of human-to-human connection. Now updated with the most recent information about PG county cases trends and the University of Maryland's re-opening protocol. 
+                    Our automated chatbot walks you through difficult medical conversations while maintaining the feel of human-to-human connection. Now updated with the most recent information about Prince George's county cases trends and the University of Maryland's re-opening protocol. 
                 <p>
                 <a href="usethebots.html" class="button" style="font-size:1.2vw">Use our bots</a>
             </div>
